INCLUDES += -I$(srcdir) -I$(srcdir)/../include/mysql

bin_PROGRAMS = XServer

XServer_SOURCES = \
AccountManager.cpp \
AccountManager.h \
Callbacks.h \
ConcurrentContainer.h \
ConcurrentContainer.cpp \
Config.cpp \
Config.h \
Creature.cpp \
Creature.h \
Defines.h \
EventHandler.cpp \
EventHandler.h \
EventMgr.cpp \
EventMgr.h \
FileCrypt.h \
FileCrypt.cpp \
Item.h \
Item.cpp \
LockedDeque.h \
Logger.cpp \
Logger.h \
Logs.h \
Main.cpp \
MapCell.cpp \
MapCell.h \
MapMgr.cpp \
MapMgr.h \
MersenneTwister.cpp \
MersenneTwister.h \
Mutex.h \
MySQL.cpp \
MySQL.h \
Object.cpp \
Object.h \
Packet.cpp \
Packet.h \
PacketHandler.cpp \
PacketHandler.h \
Player.cpp \
Player.h \
Session.cpp \
Session.h \
Shared.cpp \
Shared.h \
Singleton.cpp \
Singleton.h \
SocketWorker.cpp \
SocketWorker.h \
Spell.h \
Spell.cpp \
SpellAura.h \
SpellAura.cpp \
SQLStorage.cpp \
SQLStorage.h \
StackBuffer.h \
StackBuffer.cpp \
Test.cpp \
Test.h \
ThreadFuncs.h \
ThreadFuncs.cpp \
ThreadPool.h \
ThreadPool.cpp \
TypeDefs.h \
Unit.cpp \
Unit.h \
Util.cpp \
Util.h \
UtilTest.cpp \
Utiltest.h \
World.h \
World.cpp \
MersenneTwister/mersenne.cpp \
MersenneTwister/mother.cpp \
MersenneTwister/rancombi.cpp \
MersenneTwister/randomc.h \
MersenneTwister/userintf.cpp \
micropether/micropather.cpp \
micropether/micropather.h
